# QCustomPlot

./: CMakeLists.txt
src/: colorgradient.cpp  core.cpp  core.h  datacontainer.cpp  datacontainer.h  global.cpp  global.h  item.cpp  layer.cpp  paintbuffer.cpp  plottable1d.cpp  plottable1d.h
src/axis/: axis.cpp  axisticker.cpp  axistickerfixed.cpp  axistickerpi.cpp  axistickertime.cpp
src/items/: item-tracer.cpp
